--- a/projects/java/berry-books/src/main/resources/messages.properties
+++ b/projects/java/berry-books/src/main/resources/messages.properties
@@ -8,3 +8,40 @@ error.password.unmatch           = 指定されたパスワードが間違って
 error.cart.empty                 = カートに商品が一つも入っていません
 error.order.outof-stock          = 注文された書籍「{0}」は、指定された個数、在庫に存在しません
 error.order.optimistic-lock      = 別の顧客によって在庫が更新されました
+
+# ===== 共通メッセージ =====
+error.email.required             = メールアドレスを入力してください
+error.email.invalid              = 有効なメールアドレスを入力してください
+error.password.required          = パスワードを入力してください
+error.general                    = エラーが発生しました
+
+# ===== 顧客登録関連 =====
+error.customer.name.required     = 顧客名を入力してください
+error.customer.name.max-length   = 顧客名は50文字以内で入力してください
+error.email.max-length           = メールアドレスは100文字以内で入力してください
+error.password.length            = パスワードは8文字以上20文字以内で入力してください
+error.birthday.format            = 生年月日はyyyy-MM-dd形式で入力してください（例：1990-01-15）
+error.birthday.parse-error       = 生年月日の形式が正しくありません（例：1990-01-15）
+error.address.max-length         = 住所は200文字以内で入力してください
+error.address.invalid-prefecture = 住所は正しい都道府県名で始まる必要があります
+error.registration               = 登録中にエラーが発生しました
+error.email.already-exists       = このメールアドレスは既に登録されています
+
+# ===== ログイン関連 =====
+error.login.failed               = ログインに失敗しました
+error.login.invalid-credentials  = メールアドレスまたはパスワードが正しくありません
+
+# ===== カート・注文関連 =====
+error.delivery-address.required  = 配送先住所を入力してください
+error.delivery-address.max-length = 配送先住所は200文字以内で入力してください
+error.delivery-address.invalid-prefecture = 配送先住所は正しい都道府県名で始まる必要があります
+error.settlement-type.required   = 決済方法を選択してください
+error.out-of-stock.message       = 在庫不足
+error.out-of-stock               = 在庫不足: 
+error.optimistic-lock            = 他のユーザーが同時に注文しました。もう一度お試しください
+error.order-processing           = 注文処理中にエラーが発生しました: 
+
+# ===== データ検索エラー =====
+error.book.not-found             = Book not found: 
+error.order-tran.not-found       = OrderTran not found for ID: 
+error.order-detail.not-found     = OrderDetail not found for PK:
